Добавление блока для кнопки

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <button class="container__level__button">2</button>
             <button class="container__level__button">3</button>
         </div>
-        <button class="container__button">Старт</button>
+        <div class="container__start">
+            <button class="container__start__button">Старт</button>
+        </div>
     </div>
 </body>
 </html>
