--- a/index.html
+++ b/index.html
@@ -8,18 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="container__heading">
-            <p class="container__heading__text">Выбери сложность</p>
-        </div>
-        <div class="container__level">
-            <button class="container__level__button">1</button>
-            <button class="container__level__button">2</button>
-            <button class="container__level__button">3</button>
-        </div>
-        <div class="container__start">
-            <button class="container__start__button">Старт</button>
-        </div>
-    </div>
+    <script src="index.js"></script>
 </body>
 </html>
