--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="index.js"></script>
+    <!-- <div class="header">
+        <div class="header__timer">
+            <div class="header__timer__time__unit">
+                <p class="header__timer__time__unit__text">min</p>
+                <p class="header__timer__time__unit__text">sek</p>
+            </div>
+            <div class="header__timer__time">
+                <p>00.00</p>
+            </div>
+        </div>
+        <button class="header__button__retry">Начать заново</button>
+    </div>
+    <div class="level">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+        <img src="img/рубашка.png" width="120px" alt="back of a card">
+    </div> -->
+    <script type="module" src="index.js"></script>
 </body>
 </html>
